[workspace]
members = ["clients"]

resolver = "2"

[workspace.package]
version = "0.0.1"
authors = ["Volodymyr Dotsenko <volodymyrdotsenko@gmail.com>"]
repository = "https://github.com/volodymyrd/rafka"
homepage = "https://github.com/volodymyrd/rafka"
license = "Apache-2.0"
edition = "2024"

[workspace.dependencies]
