[workspace]
members = ["clients", "core"]

resolver = "2"

[workspace.package]
version = "0.0.1"
authors = ["Volodymyr Dotsenko <volodymyrdotsenko@gmail.com>"]
repository = "https://github.com/volodymyrd/rafka"
homepage = "https://github.com/volodymyrd/rafka"
license = "Apache-2.0"
edition = "2024"

[workspace.dependencies]
thiserror = "2.0.16"
clap = { version = "4.5.48", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
indexmap = "2"
