[workspace]
members = ["clients", "core", "group-coordinator", "server", "server-common", "storage"]

resolver = "2"

[workspace.package]
version = "0.0.1"
authors = ["Volodymyr Dotsenko <volodymyrdotsenko@gmail.com>"]
repository = "https://github.com/volodymyrd/rafka"
homepage = "https://github.com/volodymyrd/rafka"
license = "Apache-2.0"
edition = "2024"

[workspace.dependencies]
clap = { version = "4", features = ["derive"] }
easy-config-def = "0.1.6"
kafka-protocol = "0.16.0"
once_cell = "1"
rafka-clients = { path = "./clients" }
rafka-server = { path = "./server" }
rafka-server-common = { path = "./server-common" }
rafka-storage = { path = "./storage" }
rafka-group-coordinator = { path = "./group-coordinator" }
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0", features = ["env-filter"] }
indexmap = "2"
