[package]
name = "rafka-server-common"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
easy-config-def = { workspace = true }
once_cell = { workspace = true }
tracing = { workspace = true }
indexmap = { workspace = true }
rafka-clients = { workspace = true }
