[package]
name = "rafka-storage"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
easy-config-def = { workspace = true }
rafka-server-common = { workspace = true }
once_cell = { workspace = true }
